--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "@reduxjs/toolkit": "^1.5.1",
     "date-fns": "^2.19.0",
     "react": "17.0.1",
     "react-native": "0.64.0",
@@ -23,7 +24,8 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.0.0",
     "react-native-sqlite-storage": "^5.0.0",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "react-redux": "^7.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -33,6 +35,7 @@
     "@types/react-native": "^0.64.0",
     "@types/react-native-sqlite-storage": "^5.0.0",
     "@types/react-native-vector-icons": "^6.4.6",
+    "@types/react-redux": "^7.1.16",
     "@types/react-test-renderer": "^16.9.2",
     "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
