- README.md with development instructions - a bit of styling - image picker component

--- a/ios/Lainasin/Info.plist
+++ b/ios/Lainasin/Info.plist
@@ -69,5 +69,7 @@
 			<string>Octicons.ttf</string>
 			<string>Zocial.ttf</string>
 		</array>
+		<key>NSPhotoLibraryUsageDescription</key>
+		<key>NSCameraUsageDescription</key>
 	</dict>
 </plist>
