--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^3.3.2",
     "react-native-paper": "^4.7.2",
     "react-native-paper-dates": "^0.4.3",
     "react-native-reanimated": "^2.1.0",
