--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
@@ -21,7 +22,7 @@
     "react-native-image-picker": "^3.3.2",
     "react-native-paper": "^4.7.2",
     "react-native-paper-dates": "^0.4.3",
-    "react-native-reanimated": "^2.1.0",
+    "react-native-reanimated": "^1",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.0.0",
     "react-native-sqlite-storage": "^5.0.0",
