push notification configuration. TODO: - schedule notifications on loan creation with expiry date - remove scheduled notification on loan delete or mark as returned

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^2",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/push-notification-ios": "^1.8.0",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "@reduxjs/toolkit": "^1.5.1",
@@ -22,6 +23,7 @@
     "react-native-image-picker": "^3.3.2",
     "react-native-paper": "^4.7.2",
     "react-native-paper-dates": "^0.4.3",
+    "react-native-push-notification": "^7.2.3",
     "react-native-reanimated": "^1",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.0.0",
@@ -35,6 +37,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.20",
     "@types/react-native": "^0.64.0",
+    "@types/react-native-push-notification": "^7.2.0",
     "@types/react-native-sqlite-storage": "^5.0.0",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-redux": "^7.1.16",
